--- a/meedautomation/src/test/resources/objectRepository.properties
+++ b/meedautomation/src/test/resources/objectRepository.properties
@@ -10,6 +10,12 @@ LOGIN=Xpath://android.widget.Button[@resource-id='login-btn']
 
 #Page: Home Screen -1
 INTERNAL_TRANSFER=Xpath://*[@resource-id='internal-transfer-click']
+P2P_TRANSFER=Xpath://*[@resource-id='p2p-transfer-click']
+INVITE=Xpath://*[@resource-id='invite-users-click']
+MEEDSHARE=Xpath://*[@resource-id='meed-meedshare-click']
+
+
+
 
 #Page: Internal Transfer Screen
 NEXT=Xpath://android.widget.Button[@index='0']
@@ -17,9 +23,15 @@ CHECKING=Xpath://android.widget.EditText[@index='0']
 
 #Page: Internal Transfer Screen -2
 Amount=Xpath://android.widget.EditText[@index='0']
-Frequency:Xpath://android.view.View[@text='Frequency']
+Frequency:Xpath://android.view.View[@text='Frequency' or @resource-id='frequency']
 Once:Xpath://android.widget.RadioButton[@text='Once']
 Weekly:Xpath://android.widget.RadioButton[@text='Weekly']
 Monthly:Xpath://android.widget.RadioButton[@text='Monthly']
 Yearly:Xpath://android.widget.RadioButton[@text='Yearly']
 CONFIRM=Xpath://android.widget.Button[@resource-id='btn-confirm']
+
+#Page: Internal Transfer -  Confirmation screen
+Amount_value=Xpath://android.widget.EditText[@index='0']
+Frequency_value=Xpath://android.view.View[@resource-id='frequency']
+Starting_on_value=Xpath://android.view.View[@resource-id='transfer-starting-date']
+Notes_value=
