Adding feature files- Account information, Bill Pay, Card Swap and updated object repo

--- a/src/test/resources/objectRepository.properties
+++ b/src/test/resources/objectRepository.properties
@@ -62,6 +62,42 @@ Type_new_user_email_address=Xpath://android.widget.EditText[@index='0']
 Filter_by_nickname_or_email=Xpath://android.view.View[@resource-id='label-search-input-send-money']
 
 
+#Page: Account Management
+ACCOUNT_MANAGEMENT=Xpath://android.view.View[@text='ACCOUNT MANAGEMENT']
+CARD=Xpath://android.widget.ToggleButton[@text='CARD']
+Freeze_Card=Xpath://android.widget.Button[@text='Freeze Card '] 
+Lost/Stolen=Xpath://android.widget.Button[@text='Lost/Stolen ']
+Replace_Card=Xpath://android.widget.Button[@text='Replace Card ']
+CARD_PIN=Xpath://android.widget.Button[@text='CARD PIN ']
+Freeze_Card_Now=Xpath://android.widget.CheckBox[@resource-id='toggle-37-0' or @index='1']
+CALL_NOW=Xpath://android.widget.Button[@text='CALL NOW ']
+
+
+#Page: Account Information
+ACCOUNT_INFORMATION=Xpath://android.view.View[@text='ACCOUNT INFORMATION']
+ACCOUNT_DETAILS=Xpath://android.view.View[@text='ACCOUNT DETAILS']
+STATEMENTS=Xpath://android.view.View[@text='STATEMENTS']
+
+
+#Page: Bill Pay & Menu Options
+PAYMENT_&_DEPOSITS=Xpath://android.view.View[@text='PAYMENTS & DEPOSITS']
+MEED_REWARDS=Xpath://android.view.View[@text='MEED REWARDS']
+PRIVACY_&_LEGAL=Xpath://android.view.View[@text='PRIVACY & LEGAL']
+MESSAGE_CENTER=Xpath://android.view.View[@text='MESSAGE CENTER']
+CONTACT_US=Xpath://android.view.View[@text='CONTACT US']
+LOGOUT=Xpath://android.view.View[@text='LOGOUT']
+BACK=Xpath://android.view.View[@text='BACK']
+BILL_PAY=Xpath://android.view.View[@text='BILL PAY']
+CARD_SWAP=Xpath://android.view.View[@text='CARD SWAP']
+CHECK_DEPOSIT=Xpath://android.view.View[@text='CHECK DEPOSIT']
+INTERNATIONAL_TRANSFERS=Xpath://android.view.View[@text='INTERNATIONAL TRANSFERS']
+Add_a_bill=Xpath://android.widget.Button[@text='Add a bill']
+Next=Xpath://android.widget.Button[@text='Next']
+
+
+#Page: Card Swap
+Get_Started=Xpath://android.widget.Button[@text='Get Started']
+
 #Page: Settings
 Menu=Xpath://android.widget.Button[@text='menu ']
 SETTINGS=Xpath://android.view.View[@text='SETTINGS']
