Adding updated Object Repo

--- a/src/test/resources/objectRepository.properties
+++ b/src/test/resources/objectRepository.properties
@@ -28,7 +28,7 @@ CLOSE=Xpath://android.widget.Button[@resource-id='invite-user-close-btn' or @tex
 TRACK_INVITEES=Xpath://android.widget.ToggleButton[@text='custom trackinvites-icon TRACK INVITEES']
 Sent=Xpath://android.view.View[@text='Sent']
 Read=Xpath://android.view.View[@text='Read'
-Applied=Xpath://android.view.View[@text='Applied'
+Applied=Xpath://android.view.View[@text='Applied']
 
 #Page: Home Screen -1
 INTERNAL_TRANSFER=Xpath://*[@resource-id='internal-transfer-click']
