Adding Meed Rewards feature file and updated Object repo for Meed rewards journey

--- a/src/test/resources/objectRepository.properties
+++ b/src/test/resources/objectRepository.properties
@@ -12,7 +12,7 @@ Forgot_Password=Xpath://android.view.View[@resource-id='goto-forgot-password-pag
 SEND=Xpath://android.widget.Button[@resource-id='submit-btn']
 OK=Xpath://android.widget.Button[@text='OK ']
 Please_provide_your_username=className:android.widget.EditText
-NEXT=Xpath://android.widget.Button[@text='NEXT ']
+NEXT=Xpath://android.widget.Button[@text='NEXT ' or @text='NEXT']
 Favorite_vacation_location_?=className:android.widget.EditText
 Favorite_sport_?=className:android.widget.EditText
 City_where_you_were_born?=className:android.widget.EditText
@@ -28,7 +28,7 @@ CLOSE=Xpath://android.widget.Button[@resource-id='invite-user-close-btn' or @tex
 TRACK_INVITEES=Xpath://android.widget.ToggleButton[@text='custom trackinvites-icon TRACK INVITEES']
 Sent=Xpath://android.view.View[@text='Sent']
 Read=Xpath://android.view.View[@text='Read'
-Applied=Xpath://android.view.View[@text='Applied']
+Applied=Xpath://android.view.View[@text='Applied']/
 
 #Page: Home Screen -1
 INTERNAL_TRANSFER=Xpath://*[@resource-id='internal-transfer-click']
@@ -97,6 +97,13 @@ Next=Xpath://android.widget.Button[@text='Next']
 
 #Page: Card Swap
 Get_Started=Xpath://android.widget.Button[@text='Get Started']
+
+#Page: Meed Rewards
+MEEDEXTRAS=Xpath://android.view.View[@text='MEEDEXTRAS']
+MEEDCOVER=Xpath://android.view.View[@text='MEEDCOVER']
+MEEDTRAVEL=Xpath://android.view.View[@text='MEEDTRAVEL']
+
+
 
 #Page: Settings
 Menu=Xpath://android.widget.Button[@text='menu ']
